--- a/main/templates/main/_action_form.html
+++ b/main/templates/main/_action_form.html
@@ -16,10 +16,18 @@
         <img src="{% static 'main/img/action1.png' %}" alt="" class="action-img">
         <h2 class="action-title">мои соц.сети</h2>
         <div class="action-social">
-            <img src="{% static 'img/vk.svg' %}" alt="" class="action-soc">
-            <img src="{% static 'img/telegram.svg' %}" alt="" class="action-soc">
-            <img src="{% static 'img/whatsapp.svg' %}" alt="" class="action-soc">
-            <img src="{% static 'img/web.svg' %}" alt="" class="action-soc">
+            <a href="#">
+                <img src="{% static 'img/vk.svg' %}" alt="" class="action-soc">
+            </a>
+            <a href="#">
+                <img src="{% static 'img/telegram.svg' %}" alt="" class="action-soc">
+            </a>
+            <a href="#">
+                <img src="{% static 'img/whatsapp.svg' %}" alt="" class="action-soc">
+            </a>
+            <a href="#">
+                <img src="{% static 'img/web.svg' %}" alt="" class="action-soc">
+            </a>
         </div>
     </div>
 </div>
