--- a/main/templates/main/_two_action_form.html
+++ b/main/templates/main/_two_action_form.html
@@ -94,7 +94,7 @@
   .test-action-form { padding: 28px; }
   .test-action-form .test-title { font-size: 26px; }
   .test-form { gap: 12px; }
-  .test-description { font-size: 18px; }
+  .test-description { font-size: 14px; }
 }
 </style>
 
@@ -108,7 +108,7 @@
     <input class="test-input" placeholder="Электронная почта">
     <input class="test-input" placeholder="Номер телефона">
     <textarea class="test-textarea" placeholder="Опишите, чем могу быть полезен"></textarea>
-    <p class="test-note">нажимая на кнопку отправить, вы даете согласие</br>на обработку персональных данных и соглашаетесь</br>с политикой конфиденциальности</p>
+    <p class="test-note">Нажимая на кнопку отправить, вы даете согласие на обработку</br>персональных данных и соглашаетесь с политикой конфиденциальности</p>
     <button class="test-submit">Оставить заявку</button>
   </div>
 </div>
