--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -33,7 +33,7 @@
                             </div>
                         </div>
                         <div class="hero-block hero-block-min">
-                            <img src="{% static 'main/img/hero_block.png' %}" alt="" class="hero-block-img">
+                            <img src="{% static 'main/img/hero_about.png' %}" alt="" class="hero-block-img">
                             <div class="hero-block-die"></div>
                         </div>
                     </div>
@@ -141,88 +141,36 @@
         </div>
         <div class="wrapper">
             <div class="container">
-                <div class="separator">
-                    <div class="hero-eclipse">
-                        <img src="{% static 'main/img/hero_eclipse_background.svg' %}" alt="" class="hero-eclipse-background">
-                        <img src="{% static 'main/img/hero_eclipse.svg' %}" alt="" class="hero-eclipse-img">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="wrapper">
-            <div class="container">
                 <section>
                     <div class="work">
                         <h2 class="work-title">как я подхожу к работе</h2>
                         <div class="work-container">
                             <div class="work-item work-item-1">
-                                <img src="{% static 'main/img/corner_top_left.svg' %}" class="corner-svg corner-top-left" alt="">
-                                <img src="{% static 'main/img/corner_top_right.svg' %}" class="corner-svg corner-top-right" alt="">
-                                <img src="{% static 'main/img/corner_bottom_left.svg' %}" class="corner-svg corner-bottom-left" alt="">
-                                <img src="{% static 'main/img/corner_bottom_right.svg' %}" class="corner-svg corner-bottom-right" alt="">
-                                <div class="work-item-back-top"></div>
-                                <div class="work-item-back-left"></div>
-                                <div class="work-item-back-bottom"></div>
-                                <div class="work-item-back-right"></div>
+                                
                                 <p class="work-item-text">Для меня ИИ — это не магия, а эффективный инструмент, который становится частью управляемой системы и приносит реальный результат. Важно не просто “подключить нейросети”, а выстроить процессы, в которых новые технологии действительно работают на цели бизнеса. Я беру на себя и стратегическую роль, и функцию методолога, и гарантирую, что все решения будут практичными, прозрачными и встроенными в ваш бизнес без боли и лишней бюрократии.</p>
                             </div>
                             <div class="work-item work-item-2">
-                                <img src="{% static 'main/img/corner_top_left.svg' %}" class="corner-svg corner-top-left" alt="">
-                                <img src="{% static 'main/img/corner_top_right.svg' %}" class="corner-svg corner-top-right" alt="">
-                                <img src="{% static 'main/img/corner_bottom_left.svg' %}" class="corner-svg corner-bottom-left" alt="">
-                                <img src="{% static 'main/img/corner_bottom_right.svg' %}" class="corner-svg corner-bottom-right" alt="">
-                                <div class="work-item-back-top"></div>
-                                <div class="work-item-back-left"></div>
-                                <div class="work-item-back-bottom"></div>
-                                <div class="work-item-back-right"></div>
+                                
                                 <p class="work-item-title">Глубокая интеграция</br>в бизнес</p>
                                 <p class="work-item-text">Работаю не “поверху”, а действительно погружаюсь в задачи и процессы, чтобы внедрение ИИ было не формальностью, а реальным драйвером роста</p>
                             </div>
                             <div class="work-item work-item-3">
-                                <img src="{% static 'main/img/corner_top_left.svg' %}" class="corner-svg corner-top-left" alt="">
-                                <img src="{% static 'main/img/corner_top_right.svg' %}" class="corner-svg corner-top-right" alt="">
-                                <img src="{% static 'main/img/corner_bottom_left.svg' %}" class="corner-svg corner-bottom-left" alt="">
-                                <img src="{% static 'main/img/corner_bottom_right.svg' %}" class="corner-svg corner-bottom-right" alt="">
-                                <div class="work-item-back-top"></div>
-                                <div class="work-item-back-left"></div>
-                                <div class="work-item-back-bottom"></div>
-                                <div class="work-item-back-right"></div>
+                                
                                 <p class="work-item-title">Прозрачность</br>и применимость</p>
                                 <p class="work-item-text">Не размениваюсь на модные концепции — фокус только на тех решениях, которые можно использовать здесь и сейчас для получения ощутимого эффекта.</p>
                             </div>
                             <div class="work-item work-item-4">
-                                <img src="{% static 'main/img/corner_top_left.svg' %}" class="corner-svg corner-top-left" alt="">
-                                <img src="{% static 'main/img/corner_top_right.svg' %}" class="corner-svg corner-top-right" alt="">
-                                <img src="{% static 'main/img/corner_bottom_left.svg' %}" class="corner-svg corner-bottom-left" alt="">
-                                <img src="{% static 'main/img/corner_bottom_right.svg' %}" class="corner-svg corner-bottom-right" alt="">
-                                <div class="work-item-back-top"></div>
-                                <div class="work-item-back-left"></div>
-                                <div class="work-item-back-bottom"></div>
-                                <div class="work-item-back-right"></div>
+                                
                                 <p class="work-item-title">Понятность</br>и прозрачность</p>
                                 <p class="work-item-text">Всё объясняю простым языком, без “магии” и хайпа, чтобы команда понимала каждое изменение и могла использовать новые инструменты самостоятельно.</p>
                             </div>
                             <div class="work-item work-item-5">
-                                <img src="{% static 'main/img/corner_top_left.svg' %}" class="corner-svg corner-top-left" alt="">
-                                <img src="{% static 'main/img/corner_top_right.svg' %}" class="corner-svg corner-top-right" alt="">
-                                <img src="{% static 'main/img/corner_bottom_left.svg' %}" class="corner-svg corner-bottom-left" alt="">
-                                <img src="{% static 'main/img/corner_bottom_right.svg' %}" class="corner-svg corner-bottom-right" alt="">
-                                <div class="work-item-back-top"></div>
-                                <div class="work-item-back-left"></div>
-                                <div class="work-item-back-bottom"></div>
-                                <div class="work-item-back-right"></div>
+                                
                                 <p class="work-item-title">Стратегия + методология</br>+ практика</p>
                                 <p class="work-item-text">Не ограничиваюсь разработкой,</br>а выстраиваю логику, обучаю команду, создаю стандарты и сопровождаю  на каждом этапе.</p>
                             </div>
                             <div class="work-item work-item-6">
-                                <img src="{% static 'main/img/corner_top_left.svg' %}" class="corner-svg corner-top-left" alt="">
-                                <img src="{% static 'main/img/corner_top_right.svg' %}" class="corner-svg corner-top-right" alt="">
-                                <img src="{% static 'main/img/corner_bottom_left.svg' %}" class="corner-svg corner-bottom-left" alt="">
-                                <img src="{% static 'main/img/corner_bottom_right.svg' %}" class="corner-svg corner-bottom-right" alt="">
-                                <div class="work-item-back-top"></div>
-                                <div class="work-item-back-left"></div>
-                                <div class="work-item-back-bottom"></div>
-                                <div class="work-item-back-right"></div>
+                                
                                 <p class="work-item-title">Ответственность</br>за результат</p>
                                 <p class="work-item-text"> Для меня важно не только внедрить ИИ,</br>но и чтобы он стал реальной частью вашего бизнеса — гарантирую поддержку</br>на всех этапах.</p>
                             </div>
@@ -326,15 +274,31 @@
                                 </div>
                                 <div class="tutorials-mobile-item">
                                     <p class="tutorial-title">мероприятие в сколково, 2023</p>
-                                    <img src="{% static 'main/img/tutorial_img1.png' %}" alt="">
+                                    <img src="{% static 'main/img/tutorial_img2.png' %}" alt="">
                                 </div>
                                 <div class="tutorials-mobile-item">
                                     <p class="tutorial-title">мероприятие в сколково, 2023</p>
-                                    <img src="{% static 'main/img/tutorial_img1.png' %}" alt="">
+                                    <img src="{% static 'main/img/tutorial_img3.png' %}" alt="">
                                 </div>
                                 <div class="tutorials-mobile-item">
                                     <p class="tutorial-title">мероприятие в сколково, 2023</p>
-                                    <img src="{% static 'main/img/tutorial_img1.png' %}" alt="">
+                                    <img src="{% static 'main/img/tutorial_img4.png' %}" alt="">
+                                </div>
+                                <div class="tutorials-mobile-item">
+                                    <p class="tutorial-title">мероприятие в сколково, 2023</p>
+                                    <img src="{% static 'main/img/tutorial_img5.png' %}" alt="">
+                                </div>
+                                <div class="tutorials-mobile-item">
+                                    <p class="tutorial-title">мероприятие в сколково, 2023</p>
+                                    <img src="{% static 'main/img/tutorial_img6.png' %}" alt="">
+                                </div>
+                                <div class="tutorials-mobile-item">
+                                    <p class="tutorial-title">мероприятие в сколково, 2023</p>
+                                    <img src="{% static 'main/img/tutorial_img7.png' %}" alt="">
+                                </div>
+                                <div class="tutorials-mobile-item">
+                                    <p class="tutorial-title">мероприятие в сколково, 2023</p>
+                                    <img src="{% static 'main/img/tutorial_img8.png' %}" alt="">
                                 </div>
                             </div>
 
@@ -347,6 +311,8 @@
                         <h2 class="cases-title">Кейсы</h2>
                         <div class="cases-indecators">
                             <div class="indicator active"></div>
+                            <div class="indicator"></div>
+                            <div class="indicator"></div>
                             <div class="indicator"></div>
                             <div class="indicator"></div>
                             <div class="indicator"></div>
@@ -1080,6 +1046,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="reviews-but-container">
+                            <button class="reviews-but cases-but-prev">
+                                <img src="/static/img/prev_arrow.svg" alt="" class="reviews-but-prev-icon">
+                            </button>
+                            <button class="reviews-but cases-but-next">
+                                <img src="/static/img/next_arrow.svg" alt="" class="reviews-but-next-icon">
+                            </button>
+                        </div>
                     </div>
                 </section>
             </div>
@@ -1098,7 +1072,9 @@
     </div>
 </body>
 <script>
-    document.addEventListener('DOMContentLoaded', () => {
+document.addEventListener('DOMContentLoaded', () => {
+    const prevBtn = document.querySelector('.cases-but-prev');
+    const nextBtn = document.querySelector('.cases-but-next');
     const slider = document.querySelector('.slider');
     const slidesContainer = document.querySelector('.slides');
     const slides = document.querySelectorAll('.slide');
@@ -1113,13 +1089,24 @@
     let currentTranslate = 0;
     let prevTranslate = 0;
     let animationID = 0;
+    let currentSlideHeight = 0;
 
     function updateSlider(index) {
         slidesContainer.style.transform = `translateX(-${index * 100}%)`;
         indicators.forEach((indicator, i) => {
             indicator.classList.toggle('active', i === index);
         });
+        updateSliderHeight(index);
     }
+
+    function updateSliderHeight(index) {
+        const caseElement = slides[index].querySelector('.case');
+        if (caseElement) {
+            const caseHeight = caseElement.offsetHeight;
+            slidesContainer.style.height = `${caseHeight}px`;
+            currentSlideHeight = caseHeight;
+    }
+}
 
     function nextSlide() {
         currentIndex = (currentIndex + 1) % totalSlides;
@@ -1132,8 +1119,16 @@
     }
 
     function startAutoSlide() {
-        autoSlideInterval = setInterval(nextSlide, 6000);
+        // autoSlideInterval = setInterval(nextSlide, 6000);
     }
+
+    prevBtn.addEventListener('click', () => {
+        prevSlide();
+    });
+
+    nextBtn.addEventListener('click', () => {
+        nextSlide();
+    });
 
     function stopAutoSlide() {
         clearInterval(autoSlideInterval);
@@ -1220,8 +1215,61 @@
         });
     });
 
+    // Обновление высоты при изменении размера окна
+    window.addEventListener('resize', () => {
+        updateSliderHeight(currentIndex);
+    });
+
     updateSlider(currentIndex);
     startAutoSlide();
+});
+
+
+document.addEventListener('DOMContentLoaded', () => {
+    const track = document.querySelector('.tutorials-mobile-track');
+    const items = document.querySelectorAll('.tutorials-mobile-item');
+    const dotsContainer = document.querySelector('.tutorials-mobile-dots');
+
+    if (!track || !items.length) return;
+
+    let index = 0;
+
+    // Создаем точки
+    items.forEach((_, i) => {
+        const dot = document.createElement('div');
+        if (i === 0) dot.classList.add('active');
+        dotsContainer.appendChild(dot);
+    });
+
+    const dots = dotsContainer.querySelectorAll('div');
+
+    const setActiveSlide = (i) => {
+        index = i;
+        track.style.transform = `translateX(-${i * 100}%)`;
+        dots.forEach(dot => dot.classList.remove('active'));
+        dots[i].classList.add('active');
+    };
+
+    dots.forEach((dot, i) => {
+        dot.addEventListener('click', () => setActiveSlide(i));
+    });
+
+    // Перетаскивание / свайп
+    let startX = 0;
+    let moveX = 0;
+
+    track.addEventListener('touchstart', e => {
+        startX = e.touches[0].clientX;
+    });
+
+    track.addEventListener('touchmove', e => {
+        moveX = e.touches[0].clientX - startX;
+    });
+
+    track.addEventListener('touchend', () => {
+        if (moveX < -50 && index < items.length - 1) setActiveSlide(index + 1);
+        if (moveX > 50 && index > 0) setActiveSlide(index - 1);
+    });
 });
 
 </script>
