--- a/main/static/main/css/contact.css
+++ b/main/static/main/css/contact.css
@@ -12,7 +12,7 @@
 .contact-line {
     position: absolute;
     width: 100%;
-    height: 20px;
+    height: 8px;
     object-fit: cover;
 }
 
@@ -144,7 +144,7 @@
     width: 100%;
     height: auto;
     padding: 12px 0px;
-    border-radius: 24px;
+    border-radius: 10px;
   }
   .contacts-block-max {
     grid-column: auto;
@@ -164,6 +164,9 @@
   }
   .contact-qr {
     max-width: 250px;
+  }
+  .contact-line {
+    object-fit: contain;
   }
   .contact-line-container {
     height: 15px;
