--- a/main/static/main/css/tutorials.css
+++ b/main/static/main/css/tutorials.css
@@ -142,6 +142,15 @@ main {
         0px -5px 10px 0px rgba(196, 26, 214, 0.5),
         0px 0px 100px 0px rgba(208, 170, 255, 0.5),
         0px 0px 120px 0px rgba(157, 78, 221, 0.3);
+    transition: all .3s ease-in-out;
+}
+
+.hero-but:hover {
+    box-shadow:
+        0px -5px 30px 1px rgba(255, 255, 255, 0.25),
+        0px -5px 20px 0px rgba(196, 26, 214, 0.5),
+        0px 0px 120px 0px rgba(208, 170, 255, 0.5),
+        0px 0px 140px 0px rgba(157, 78, 221, 0.3);
 }
 
 .hero-back {
@@ -691,6 +700,7 @@ main {
 .cases {
     position: relative;
     z-index: 4;
+    overflow: hidden;
 }
 
 .cases-title {
@@ -718,15 +728,8 @@ main {
     align-items: center;
     padding: 0px 20px 30px 20px;
     z-index: 5;
-}
-
-.case-center {
-    box-shadow:
-        5px -5px 15px 1px rgba(255, 255, 255, 0.25),
-        0px -5px 10px 0px rgba(7, 10, 207, 0.5),
-        0px 0px 30px 0px rgba(122, 108, 234, 0.4),
-        0px 0px 120px 0px rgba(66, 46, 225, 0.5);
-    z-index: 4;
+    flex: 1;
+    height: 100%;
 }
 
 .case-num {
@@ -801,6 +804,16 @@ main {
 
 .case-item-description, li {
     margin-top: 15px;
+    font-family: 'Inter';
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.2;
+    letter-spacing: -0.05em;
+    color: #ffffff;
+    text-align: left;
+}
+
+.cases ul {
     font-family: 'Inter';
     font-weight: 400;
     font-size: 18px;
@@ -1317,15 +1330,49 @@ ul, li {
     }
 
     .about-item-max .about-text {
-        margin-top: 100px !important;
+        margin-top: 62px !important;
         font-size: 16px !important;
     }
 
     .about-icon {
         height: 28px;
     }
+
+    .about-item.about-item-max.about-item-empty {
+        order: -1;
+    }
+
+    .more-title {
+        width: 100%;
+        text-align: left !important;
+    }
+
+    .more-item-title {
+        text-align: left !important;
+    }
+
+    .more {
+        align-items: flex-start !important;
+    }
+
+    .more-blocks {
+        align-items: flex-start !important;
+        text-align: left !important;
+    }
+
+    .more-item {
+        align-items: flex-start;
+        text-align: left !important;
+    }
+
+    .more-item-description {
+        text-align: left !important;
+    }
 }
 
+.more-item-title {
+    text-transform: uppercase;
+}
 
 /* --- 480px (маленькие смартфоны) --- */
 @media (max-width: 480px) {
@@ -1346,7 +1393,7 @@ ul, li {
     }
 
     .about-item-max .about-text {
-        margin-top: 90px !important;
+        margin-top: 60px !important;
         font-size: 15px !important;
     }
 
@@ -1398,7 +1445,6 @@ ul, li {
     }
 
     .more-title {
-        text-align: center;
         font-size: 42px;
     }
 
@@ -1487,7 +1533,6 @@ ul, li {
     .more-title {
         font-size: 32px;
         line-height: 1.15;
-        text-align: center;
     }
 
     .more-item-title {
@@ -1995,6 +2040,7 @@ ul, li {
         gap: 10px;
         justify-content: center;
         padding: 0 16px;
+        width: 100%;
     }
     
     .reviews-but {
@@ -2061,7 +2107,7 @@ ul, li {
     }
     
     .reviews-but {
-        width: 90px;
+        width: 100%;
         height: 34px;
         border-radius: 34px;
     }
@@ -2201,5 +2247,148 @@ ul, li {
     .faq-gradint {
         top: 260px;
         height: 140px;
+    }
+}
+
+.cases-slider {
+    display: flex;
+    transition: transform 0.3s ease;
+    gap: 20px; /* вместо padding на слайдах */
+}
+
+.slide {
+    flex: 0 0 386px; /* вычитаем суммарный gap */
+}
+
+.case-item-description-center {
+    text-align: left;
+    align-self: flex-start;
+}
+
+.case-item-description, ul {
+    align-self: flex-start;
+}
+
+@media (max-width: 768px) {
+    .hero-back {
+        bottom: auto;
+        top: 210px;
+    }
+
+    .hero-but {
+        width: 100%;
+    }
+}
+
+@media (max-width: 992px) {
+    .method-lines {
+        display: none;
+    }
+}
+
+.method-slider-controls {
+    margin-left: auto;
+    margin-right: 0;
+    margin-top: 40px;
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    justify-content: flex-end;
+    position: relative;
+    z-index: 4;
+}
+
+.method-slider-btn {
+    border: none;
+    background: none;
+    width: 124px;
+    height: 42px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 44px;
+    border: 1px solid #ffffff;
+    transition: all .3s ease-in-out;
+    cursor: pointer;
+}
+
+.method-slider-btn-next {
+    border: 3px solid #ffffff;
+}
+
+.method-slider-icon {
+    width: 26px;
+    height: 26px;
+}
+
+@media (max-width: 768px) {
+    .method-slider-controls {
+        margin-top: 24px;
+        gap: 10px;
+        justify-content: center;
+        padding: 0 16px;
+        width: 100%;
+    }
+
+    .method-slider-btn {
+        width: 100px;
+        height: 36px;
+    }
+
+    .method-slider-icon {
+        width: 20px;
+        height: 20px;
+    }
+    
+    .pos-center {
+        box-shadow: 0px -5px 10px 1px rgba(255, 255, 255, 0.25), 0px -5px 8px 0px rgba(196, 26, 214, 0.5), 0px 0px 40px 0px rgba(208, 170, 255, 0.5), 0px 0px 60px 0px rgba(157, 78, 221, 30);
+    }
+
+    .cases-gard1 {
+        filter: blur(290px);
+    }
+}
+
+@media (max-width: 480px) {
+    .method-slider-controls {
+        margin-top: 20px;
+        gap: 8px;
+        padding: 0 12px;
+    }
+
+    .method-slider-btn {
+        width: 100%;
+        height: 34px;
+        border-radius: 34px;
+    }
+
+    .method-slider-btn-next {
+        border: 2px solid #ffffff;
+    }
+
+    .method-slider-icon {
+        width: 18px;
+        height: 18px;
+    }
+}
+
+@media (max-width: 768px) {
+
+    .method-blocks {
+        display: flex;
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
+        gap: 20px;
+        padding: 0 16px;
+        scroll-behavior: smooth;
+    }
+
+    .method-item {
+        flex: 0 0 80%;
+        scroll-snap-align: center;
+    }
+
+    .method-blocks::-webkit-scrollbar {
+        display: none;
     }
 }
